[package]
name = "gopm"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
dirs = "5.0.1"
once_cell = "1.18.0"
regex = "1.10.2"
neofiglet = "0.1.1"
